[package]
name = "rusting_around"
version = "0.1.0"
authors = ["Ranovan7 <romyranovan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 2

[dependencies]
tsp = { path = "crates/tsp" }
ecs = { path = "crates/ecs" }
boids = { path = "crates/boids" }
web_server = { path = "crates/web_server" }

[workspace]
members = ["crates/*"]
