[package]
name = "tsp"
version = "0.1.0"
authors = ["Ranovan7 <romyranovan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
criterion = "0.3"
plotters = "^0.3.0"
# num_cpus = "1.13.0"

[[bench]]
name = "my_benchmark"
harness = false
